# dx-components

./: .gitignore  Cargo.toml  component.json  index.html
.github/: 404.html
assets/: calendar-dxhb8a97afd1f89bd.css  calendar-dxhe7bc30d4b5ccd92c.css  chunk_0_split-dxh216ae4dc682b9c0.wasm  chunk_0_split-dxh51c7af492462c873.wasm  chunk_0_split-dxh8ecc98c21d9bd1e.wasm  chunk_0_split-dxhd223f893e32c23.wasm  date_picker-dxh758682336df0fc7d.css  (+525 more)
components/: Cargo.toml
components/src/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.css  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_picker.css  date_picker.rs  dialog.rs  drag_and_drop_list.css  drag_and_drop_list.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  form.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  lib.rs  menubar.rs  native_select.rs  navbar.css  navbar.rs  (+24 more)
components/tests/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_picker.rs  dialog.rs  drag_and_drop_list.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  form.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  menubar.rs  native_select.rs  navbar.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  (+18 more)
floating-ui/: Cargo.toml
floating-ui/src/: lib.rs  types.rs  utils.rs
floating-ui/src/core/: compute_coords.rs  compute_position.rs  detect_overflow.rs  mod.rs
floating-ui/src/core/middleware/: arrow.rs  flip.rs  hide.rs  mod.rs  offset.rs  shift.rs  size.rs
floating-ui/src/dom/: auto_update.rs  mod.rs  platform.rs  utils.rs
primitives/: Cargo.toml
primitives/src/: accessible_icon.rs  accordion.rs  alert_dialog.rs  announce.rs  aria_hidden.rs  arrow.rs  aspect_ratio.rs  avatar.rs  button.rs  calendar.rs  carousel.rs  checkbox.rs  collapsible.rs  collection.rs  combobox.rs  command.rs  context_menu.rs  date_picker.rs  dialog.rs  direction.rs  dismissable_layer.rs  drag_and_drop_list.rs  dropdown_menu.rs  focus_guards.rs  focus_scope.rs  form.rs  hover_card.rs  input_otp.rs  label.rs  lib.rs  menu.rs  menubar.rs  navbar.rs  navigation_menu.rs  number.rs  password_toggle_field.rs  popover.rs  popper.rs  portal.rs  presence.rs  (+25 more)
primitives/src/select/: context.rs  mod.rs  text_search.rs
primitives/src/select/components/: group.rs  item_text.rs  list.rs  mod.rs  option.rs  select.rs  trigger.rs  value.rs
primitives/tests/: accessible_icon.rs  accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  form.rs  hover_card.rs  input_otp.rs  label.rs  menubar.rs  navigation_menu.rs  password_toggle_field.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switch.rs  tabs.rs  toast.rs  toggle.rs  toggle_group.rs  toolbar.rs  tooltip.rs
(+686 files in other folders)
