[workspace]
resolver = "3"
members = ["primitives", "components", "preview", "test-harness", "dioxus-attributes", "floating-ui"]

[workspace.dependencies]
dioxus-primitives = { path = "primitives" }
dioxus-components = { path = "components" }

dioxus = "0.7.3"
tailwind_fuse = { version = "0.3.2", features = ["variant"] }
tracing = { version = "0.1", features = ["std"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false
