[package]
name = "floating-ui"
version = "0.1.0"
edition = "2021"
description = "Rust port of @floating-ui/core + @floating-ui/dom"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "Node",
    "NodeList",
    "DomRect",
    "DomRectReadOnly",
    "CssStyleDeclaration",
    "EventTarget",
    "AddEventListenerOptions",
    "VisualViewport",
    "ShadowRoot",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
