[package]
name = "dioxus-primitives"
version = "0.0.1"
edition = "2021"
rust-version = "1.80.0"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "primitives"]
categories = ["gui", "wasm"]
authors = ["Dioxus Labs", "DogeDark"]
license = "MIT OR Apache-2.0"
homepage = "https://dioxuslabs.com"
repository = "https://github.com/DioxusLabs/components"

[dependencies]
dioxus.workspace = true
dioxus-attributes = { path = "../dioxus-attributes" }
floating-ui = { path = "../floating-ui" }
dioxus-sdk-time = "0.7.0"
time = { version = "0.3.44", features = ["std", "macros", "parsing", "local-offset"] }
num-integer = "0.1.46"
tracing.workspace = true


[dev-dependencies]
dioxus-ssr = "0.7.0"
regex-lite = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "HtmlElement",
    "HtmlIFrameElement",
    "HtmlInputElement",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "AddEventListenerOptions",
    "AnimationEvent",
    "CustomEvent",
    "EventListenerOptions",
    "KeyboardEvent",
    "Node",
    "NodeList",
    "PointerEvent",
    "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["router"]
router = ["dioxus/router"]
web = ["time/wasm-bindgen"]
